# alexza-platform8

./: .env.example  .gitignore  BLOB_INTEGRATION.md  CREDITS_SYSTEM.md  MODAL_SYSTEM.md  PHASE1_COMPLETE.md  PLAYGROUND_CHAT.md  README.md  THEME_TOKENS.md  TOAST_SYSTEM.md  ideas.md  openapi.yaml  package.json  pnpm-lock.yaml  render.yaml  vite.config.ts  vitest.config.ts
Manage your API keys and authentication/: ApiKeys.tsx
Manage your credits and billing/: Wallet.tsx
Test and experiment with your AI models/: Playground.tsx
Track your API usage and costs/: UsageAnalytics.tsx
View and manage project details/: ProjectOverview.tsx
cli/: README.md  package.json  pnpm-lock.yaml
client/: index.html
docs/: AGENTS.md  API_KEY_SCOPES.md  API_KEY_USAGE.md  API_VERSIONING.md  APP_STORE.md  AUDIT_LOGS.md  AUTH_OAUTH.md  AUTOMATION_BUILDER.md  BACKGROUND_JOBS.md  BACKUPS.md  BILLING_DASHBOARD.md  BILLING_LEDGER.md  CLI.md  ENTERPRISE_SSO.md  EXAMPLES.md  FEEDBACK.md  LAUNCH_CHECKLIST.md  LOGIN_EMAIL_AUDIT.md  LOGIN_INTERNAL_ERROR_SUMMARY.md  MARKETPLACE.md  MULTI_REGION.md  POSTMAN.md  PROJECT_OVERVIEW_FULL.md  PROJECT_SUMMARY_TH.md  REQUEST_REPLAY.md  SENTRY_RELEASES_AND_SOURCEMAPS.md  SENTRY_TESTING.md  SOFT_LAUNCH.md  SOFT_LAUNCH_METRICS.md  STARTER_PACKS.md  STATUS.md  STRIPE_AUDIT.md  TEMPLATES.md  USAGE_LIMITS.md  WALLET_MANUAL_TEST.md  WEBHOOKS.md  low-credits-email.md  monthly-reset-cron.md
examples/: README.md
postman/: ALEXZA.postman_collection.json  (+1 more)
sdk/python/: README.md  pyproject.toml
sdk/python/alexza_ai/: __init__.py  client.py
server/: auth.ts  (+61 more)
(+338 files in other folders)
