[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alexza-ai"
version = "1.0.0"
description = "Official ALEXZA AI Python SDK"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "ALEXZA AI" }]
keywords = ["alexza", "ai", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/alexza-ai/alexza-ai"
Repository = "https://github.com/alexza-ai/alexza-ai"

[tool.setuptools.packages.find]
where = ["."]
include = ["alexza_ai*"]
